[gd_scene load_steps=3 format=2]

[ext_resource path="res://components/wizard_editor/wizard_editor_nodes/wizard_editor_node_custom_scene.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/icon_128_kebap_horizontal.svg" type="Texture" id=2]

[node name="StepCustomScene" type="GraphNode"]
margin_right = 257.0
margin_bottom = 288.0
mouse_filter = 1
title = "Custom Scene"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0.537255, 0.819608, 0.945098, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0.537255, 0.819608, 0.945098, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="top" type="HBoxContainer" parent="."]
margin_left = 8.0
margin_top = 34.0
margin_right = 358.0
margin_bottom = 66.0
size_flags_horizontal = 3
alignment = 1

[node name="Icon" type="TextureRect" parent="top"]
modulate = Color( 0.537255, 0.819608, 0.945098, 1 )
margin_left = 122.0
margin_right = 143.0
margin_bottom = 32.0
rect_min_size = Vector2( 21, 21 )
size_flags_horizontal = 4
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="uidEdit" type="LineEdit" parent="top"]
margin_left = 147.0
margin_right = 227.0
margin_bottom = 32.0
rect_min_size = Vector2( 80, 0 )
placeholder_text = "unique ID"

[node name="DocsLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 70.0
margin_right = 358.0
margin_bottom = 90.0
text = "docs url:"

[node name="DocsEdit" type="LineEdit" parent="."]
margin_left = 8.0
margin_top = 94.0
margin_right = 358.0
margin_bottom = 126.0
rect_min_size = Vector2( 350, 0 )

[node name="UseDifferentSceneLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 130.0
margin_right = 358.0
margin_bottom = 150.0
text = "Scene override (scene path):"

[node name="ScenePathEdit" type="TextEdit" parent="."]
margin_left = 8.0
margin_top = 154.0
margin_right = 358.0
margin_bottom = 278.0
size_flags_vertical = 3
wrap_enabled = true

[connection signal="text_changed" from="top/uidEdit" to="." method="_on_uidEdit_text_changed"]
